--- a/vehicle-1/package.json
+++ b/vehicle-1/package.json
@@ -24,6 +24,7 @@
     "lucide-react": "^0.501.0",
     "mongoose": "^8.13.2",
     "react": "^19.0.0",
+    "react-icons": "^5.5.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.1",
     "tailwind-merge": "^3.2.0",
